--- a/coffee/build.gradle
+++ b/coffee/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.cnu'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = "8"
 
 configurations {
 	compileOnly {
@@ -30,3 +30,4 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_11
