--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,8 +17,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'commons-dbutils', name: 'commons-dbutils', version: '1.7'
+    implementation group: 'org.webjars', name: 'bootstrap', version: '5.3.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
