[feat] Show CRUD api 연결 - Show에 대한 모든 api 테스트 완료 - 회원가입/로그인 구현중 </br>
- auto increment 가 1 -> 52로 뛰는 현상 있음

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/escape?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/interpark?serverTimezone=Asia/Seoul
     username: root
     password: 1234
   jpa:
     open-in-view: true
     hibernate:
       # create : 실행할 때마다 테이블을 drop 하고 다시 생성
-      ddl-auto: create
+      ddl-auto: update
     # 로그에 sql 문을 출력
     show-sql: true
     properties:
