:wrench: 프로젝트 실행 구성 추가

--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,14 @@ bin/
 
 ### IntelliJ IDEA ###
 .idea
-!.idea/codeStyles/
 *.iws
 *.iml
 *.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+!.idea/codeStyles/
+!.idea/runConfigurations/
 
 ### NetBeans ###
 /nbproject/private/
